--- a/xtranscript.1
+++ b/xtranscript.1
@@ -1,6 +1,6 @@
 .TH ST 1 st\-VERSION
 .SH NAME
-st \- simple terminal
+xtranscript \- A transcript-like terminal
 .SH SYNOPSIS
 .B st
 .RB [ \-a ]
@@ -20,8 +20,8 @@ st \- simple terminal
 .RB [ \-e
 .IR command ...]
 .SH DESCRIPTION
-.B st
-is a simple terminal emulator.
+.B xtranscript
+is a terminal emulator.
 .SH OPTIONS
 .TP
 .B \-a
